just a little bit of util stuff for future